Version 0.4.4
+ Added planks (randomly generated on new map)
+ Added watercan use limit

Version 0.4.2
+ Added item info in market
+ ESC key close market window if opened
+ Added potatos to game
+ Added tomatos to game
+ Added stones (farmobjects) to game
+ Added Pickaxe (used to remove stones from field)
+ Added Axe (used to remove planks from field)
+ New file format for saves (old not work)
+ Added market button on gamescreen (or S key)
+ Added anthills.
+ Added ground drying

Version 0.4
+ Added shovel
+ Market added
+ Added grid on farm field
