@@ -3,6 +3,7 @@
   "REMOVESTONECOST":100,
   "REMOVEWILTEDCOST":10,
   "REMOVEPLANKCOST":80,
+  "WATERREFILLCOST":20,
   "DESTROY_CHANCE": 3,
   "WILT_TIME_HOURS":12,
   "MAX_ANTHILLS":12,
